# tempo-trainer

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/tempo_trainer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  Oscillator.cpp  Oscillator.h  SineWaveGenerator.cpp  Synthesizer.cpp  Synthesizer.h  WaveGenerator.cpp  WaveGenerator.h  jni_bridge.cpp
app/src/main/java/com/example/tempo_trainer/: MainActivity.java
app/src/main/java/com/example/tempo_trainer/audio/: AudioManager.java
app/src/main/java/com/example/tempo_trainer/ui/main/: MainActivity.java  MainFragment.java  MainViewModel.java
app/src/main/res/layout/: main_fragment.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/tempo_trainer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
